# gomoku_fpse

./: .dockerignore  .gitignore  Dockerfile  README.md  dune
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/src/: all-00000000000000000000000000000000
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/455a706311ae974412851d5f5e6befec/: dune__exe___ppx.cmo
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/api/src/: board.cmxa  board.ml  board.pp.ml  board.pp.mli
_build/default/api/src/.merlin-conf/: lib-board
_build/default/api/tests/: oUnit-Gomoku tests.cache  tests.ml  tests.pp.ml
_build/default/src/: board.cma  board.cmxa  board.cmxs  board.ml  board.pp.ml  dune
_build/default/src/.merlin-conf/: lib-board
api/: bisect461125282.coverage  dune  dune-project  gomoku_fpse.opam
api/_coverage/: index.html
api/_coverage/src/: ai.ml.html  board.ml.html
api/src/: ai.ml  board.ml  board.mli  dune  server.ml
api/tests/: dune  tests.ml
client/: bsconfig.json  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  Board.css  Board.js  index.js
frontend/: .gitignore  .merlin  bsconfig.json  package-lock.json  package.json
frontend/lib/bs/: .bsdeps  .ninja_log  .sourcedirs.json  build.ninja  install.ninja
frontend/lib/bs/src/: index.ast  index.cmi  index.cmj  index.cmt
frontend/public/: index.html
frontend/src/: index.res
src/: board.ml  board.mli
(+13 files in other folders)
