(library
 (name board)
 (modules board)
 (libraries core yojson ppx_deriving_yojson.runtime)
 (preprocess
  (pps bisect_ppx ppx_jane ppx_deriving_yojson)))

(executable
 (name server)
 (modules server)
 (libraries board core dream yojson ppx_deriving_yojson.runtime lwt_react)
 (preprocess
  (pps ppx_deriving_yojson ppx_jane lwt_ppx)))
