(library
 (name board)
 (modules board)
 (libraries core yojson ppx_deriving_yojson.runtime)
 (preprocess
  (pps bisect_ppx ppx_jane ppx_deriving_yojson)))

(library
 (name ai)
 (modules ai)
 (libraries core board)
 (preprocess
  (pps bisect_ppx ppx_jane)))

(executable
 (name server)
 (modules server)
 (libraries ai board core dream yojson ppx_deriving_yojson.runtime lwt_react)
 (preprocess
  (pps ppx_deriving_yojson ppx_jane lwt_ppx)))
